--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "emoji-dictionary": "^1.0.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^3.2.0",
