--- a/package.json
+++ b/package.json
@@ -44,9 +44,13 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "humps": "^2.0.1",
+    "npm": "^5.7.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.7",
     "react-router": "^3.2.0",
+    "redux": "^3.7.2",
     "webpack": "^2.6.0"
   }
 }
